# Project-codex

./: .gitignore  .worker_trigger  AGENTS.md  CLAUDE.md  README.md  package.json  requirements-dev.txt
tools/gpt_audit/: 20260608_gptqueueloop_GPTQUEUELOOPIMPL_REQUEST.md  DESIGN_audit_dashboard_v0.1.md  HANDOFF_OPERATIONAL_IMPL_DESIGN_v0.1_20260623.md  HANDOFF_SCHEMA_APPENDIX_v0.1_20260619.md  HANDOFF_SCHEMA_APPENDIX_v0.2_20260619.md  HANDOFF_SCHEMA_APPENDIX_v0.3_20260619.md  HANDOFF_SCHEMA_APPENDIX_v0.4_20260619.md  HANDOFF_SCHEMA_APPENDIX_v0.5_20260619.md  HANDOFF_d1bunken_resume.md  HEAD_HAND_HANDOFF_DESIGN_v0.1_20260619.md  HEAD_HAND_HANDOFF_DESIGN_v0.2_20260619.md  HEAD_HAND_HANDOFF_DESIGN_v0.3_20260619.md  HEAD_HAND_HANDOFF_DESIGN_v0.4_20260619.md  HEAD_HAND_HANDOFF_DESIGN_v0.5_20260619.md  LEASE_SUBSYSTEM_DESIGN_v0.1_20260623.md  LEASE_SUBSYSTEM_DESIGN_v0.2_20260624.md  LEASE_SUBSYSTEM_DESIGN_v0.3_20260625.md  LEASE_SUBSYSTEM_DESIGN_v0.4_20260625.md  LEASE_SUBSYSTEM_DESIGN_v0.5_20260625.md  LEASE_SUBSYSTEM_RATIFICATION_20260625.md  RATIFY_head_hand_handoff_v0.5_20260623.md  README.md  RUNBOOK_handoff_lane_v0.1.md  RUNBOOK_macCC.md  WORKER_DELEGATION_DESIGN_v0.1_20260619.md  WORKER_DELEGATION_DESIGN_v0.2_20260619.md  _ACTION_QUEUE.md  _AUDIT_LEDGER.generated.jsonl  _AUDIT_LEDGER.json  _AUDIT_LEDGER.snapshot.jsonl  _VERIFY_20260608_GPTQUEUELOOPIMPL.md  alo_gpt_audit.py  backfill_seed_20260608.py  consumed_view.py  demo_run.py  pyproject.toml  queue.py  seed_20260608.py  test_consumed_view.py  test_queue.py
tools/gpt_audit/audit_requests/: 20260623_lease_subsystem_v0.1_GPTPRO_AUDIT_REQUEST.md  20260623_lease_subsystem_v0.1_REQUEST.md  20260624_lease_subsystem_v0.2_GPTPRO_AUDIT_REQUEST.md  (+3 more)
tools/worker_queue/: README.md  com.alo.worker.plist  pyproject.toml  run_worker.sh
tools/workflow_event/: README.md  pyproject.toml
(+1606 files in other folders)
